libs/extractor/src/snapshots/extractor__tests__support_transpile_mjs.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.mjs\",\nr#\"import { jsxs as r, jsx as e } from \"react/jsx-runtime\";\nimport { Box as o, Text as t, Flex as i } from \"@devup-ui/react\";\nfunction c() {\n  return /* @__PURE__ */ r(\"div\", { children: [\n    /* @__PURE__ */ e(\n      o,\n      {\n        _hover: {\n          bg: \"blue\"\n        },\n        bg: \"$text\",\n        color: \"red\",\n        children: \"hello\"\n      }\n    ),\n    /* @__PURE__ */ e(t, { typography: \"header\", children: \"typo\" }),\n    /* @__PURE__ */ e(i, { as: \"section\", mt: 2, children: \"section\" })\n  ] });\n}\nexport {\n  c as Lib\n};\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$text",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin-top",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Typography(
            "header",
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport { jsxs as r, jsx as e } from \"react/jsx-runtime\";\nfunction c() {\n\treturn /* @__PURE__ */ r(\"div\", { children: [\n\t\t((__devupSpread0) => /* @__PURE__ */ e(\"div\", {\n\t\t\tchildren: __devupSpread0,\n\t\t\tclassName: \"OHdbk4xhyc6_lbsv2t OHcpaugheu4ltw2pel OLcolor-vred\"\n\t\t}))(\"hello\"),\n\t\t((__devupSpread2, __devupSpread1) => /* @__PURE__ */ e(\"span\", {\n\t\t\tchildren: __devupSpread1,\n\t\t\tclassName: __devupSpread2\n\t\t}))(\"typo-header\", \"typo\"),\n\t\t((__devupSpread3) => /* @__PURE__ */ e(\"section\", {\n\t\t\tchildren: __devupSpread3,\n\t\t\tclassName: \"OLdisplay-vflex-o0 OLmargin_dtop-v8px\"\n\t\t}))(\"section\")\n\t] });\n}\nexport { c as Lib };\n",
}
